After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 587890 - Gvfs won't build if libsoup is compiled without gnome support
Gvfs won't build if libsoup is compiled without gnome support
Status: RESOLVED FIXED
Product: gvfs
Classification: Core
Component: http backend
1.3.x
Other All
: Normal major
: ---
Assigned To: gvfs-maint
gvfs-maint
Depends on:
Blocks:
 
 
Reported: 2009-07-06 13:12 UTC by Priyank
Modified: 2013-10-25 20:08 UTC
See Also:
GNOME target: ---
GNOME version: 2.25/2.26


Attachments
Patch to workaround this issue. (2.19 KB, patch)
2009-07-06 13:13 UTC, Priyank
none Details | Review
http: Clean up usage of libsoup (2.39 KB, patch)
2013-10-11 10:09 UTC, Ross Lagerwall
accepted-commit_now Details | Review

Description Priyank 2009-07-06 13:12:12 UTC
Please describe the problem:
Currently, the gvfs http backend makes use of SOUP_TYPE_PROXY_RESOLVER_GNOME provided by libsoup-gnome.h

However, if libsoup is built without gnome support, gvfs' http backend fails to build.

I have attached a patch to add an additional check to fallback to libsoup if libsoup-gnome is absent. This will let the gvfs http backend use SOUP_TYPE_PROXY_RESOLVER provided by soup-proxy-resolver.h.

Steps to reproduce:
1. Build libsoup with --without-gnome
2. Build gvfs against libsoup



Actual results:
gvfs fails to build because it is unable to find libsoup-gnome-2.4

Expected results:
gvfs should fallback to use libsoup-2.4

Does this happen every time?
yes

Other information:
I have attached a patch to workaround this.
Comment 1 Priyank 2009-07-06 13:13:02 UTC
Created attachment 137916 [details] [review]
Patch to workaround this issue.

Attached patch to fix this.
Comment 2 Dan Winship 2009-07-06 13:44:27 UTC
SOUP_TYPE_PROXY_RESOLVER is an interface, not an instantiable type. If you wanted to support building without libsoup-gnome support, then the right thing to do would be to not use a proxy resolver at all in that case.

It is not clear why you would want to do this though, since it would only make sense for building gvfs on a system without GNOME, which is pretty much a contradiction.
Comment 3 J. David Ibáñez 2010-08-25 14:48:08 UTC
I need to install gvfs (with HTTP support) in a server.

(In reply to comment #2) 
> It is not clear why you would want to do this though, since it would only make
> sense for building gvfs on a system without GNOME, which is pretty much a
> contradiction.
Comment 4 Dan Winship 2012-12-12 10:44:34 UTC
gvfs ought to be using SOUP_TYPE_PROXY_RESOLVER_DEFAULT at this point, and no longer needs to link against libsoup-gnome
Comment 5 Ross Lagerwall 2013-10-11 10:09:41 UTC
Created attachment 256987 [details] [review]
http: Clean up usage of libsoup

Use libsoup rather than libsoup-gnome since libsoup-gnome is not
required anymore.

Bump the libsoup requirement to 2.42 to prevent a build failure with old
libsoups (undefined references to soup_session_request_uri).

Don't include individual libsoup headers as recommended by the libsoup
documentation.
Comment 6 Ondrej Holy 2013-10-11 12:35:37 UTC
Review of attachment 256987 [details] [review]:

It looks good.
Comment 7 Ross Lagerwall 2013-10-25 20:08:02 UTC
Pushed to master as 2041889.