http: Clean up usage of libsoup

Use libsoup rather than libsoup-gnome since libsoup-gnome is not
required anymore.

Bump the libsoup requirement to 2.42 to prevent a build failure with old
libsoups (undefined references to soup_session_request_uri).

Don't include individual libsoup headers as recommended by the libsoup
documentation.

https://bugzilla.gnome.org/show_bug.cgi?id=587890